--- a/packages/example/pages/index/index.wxml
+++ b/packages/example/pages/index/index.wxml
@@ -1,7 +1,9 @@
-<view class="container">
-  <view class="usermotto">
-    <view class="user-motto">{{ computedMotto }}</view>
-    <button bindtap="doIncrease">Click</button>
-    <view>count: {{ count }}</view>
-  </view>
+<view>
+    <view class="uni-list">
+        <view class="uni-list-cell"  wx:for="{{listData}}" wx:for-index="key" wx:key="key">
+        <view style='flex:1'>
+            <card item="{{item}}"></card>
+        </view>
+        </view>
+    </view>
 </view>
