--- a/packages/example/pages/index/index.wxml
+++ b/packages/example/pages/index/index.wxml
@@ -1,4 +1,7 @@
 <view>
+  <comp></comp>
+  <button bindtap="toLog">to log</button>
+  <view>{{ name }}</view>
     <view class="uni-list">
         <view class="uni-list-cell"  wx:for="{{listData}}" wx:for-index="key" wx:key="key">
         <view style='flex:1'>
